syntax = "proto3";
package shop.v1;
import "google/api/annotations.proto";
import "shop/v1/shop_message.proto";
option go_package = "./shopv1";

service ShopService {
  rpc CreateShop(CreateShopRequest) returns (CreateShopResponse) {
    option (google.api.http) = {
      post: "/v1/shop/123"
      body: "*"
    };
  }
}